<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Details">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/details_poster_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/details_poster_image"
                android:src="@drawable/ic_launcher_background" />

            <TextView
                android:id="@+id/details_original_title_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/original_title"
                android:textColor="@android:color/black"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/details_overview_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/overview"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/details_vote_average_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vote_average"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/details_release_date_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/release_date"
                android:textSize="20sp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>